main.css
/* ... */
.customsubtitle{
    font-weight:300;
    line-height: 50px;
    font-size: 20px;
}
.hoverBold{
    color: var(--main);
}
.hoverBold:hover{
    color: var(--light) !important;
}
.circleShadow{
    border-radius: 500px;
    box-shadow: 0px 3px 8px 0px var(--shadow);
}
.zoom:hover{
    transform: scale(1.15);
    transition: 0.1s;
}
#work, #about{
    display: block; 
    position: relative; 
    top: -100px; 
    visibility: hidden;
}

/* GENERAL AND MOBILE STYLE */
h2 {
    font-size:20px;
}
#navigationContainer {
    /* background-color: var(--background); */
    background-color: var(--desktopnav);
    backdrop-filter: blur(7px);
    -webkit-backdrop-filter: blur(7px);
    -ms-backdrop-filter:blur(7px);
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1;
}
#navigationName{
    color: var(--main);
    margin-left:10px;
    font-size: 22px;
    cursor: pointer;
}
.nav-item{
    letter-spacing: 0.1rem;
    padding-left: 2px;
    padding-right: 2px;
}
.navbar-light .navbar-nav .nav-link{
    color:var(--main);
}
.navbar-light .navbar-toggler{
    filter: var(--invert);
}
.navigationShadow {
    border-radius: 0px 0px 5px 5px;
    box-shadow: 0px 1px 10px var(--shadow);
}
#header{
    background-color: var(--background);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100vh;
    width: 100vw;
    padding: 10% 10% 30% 10%; 
}
#headerText{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}
#headertag{
    display: none;
}
#name{
    color: var(--main);
}
.projectSectionTitle{
    text-transform: uppercase;
    text-align:center;
    font-style: italic;
    letter-spacing: 0.2rem;
    font-size: 25px;
}
#projectContainer, #projectArchiveContainer{
    display:flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-bottom: 50px;
}
.row{
    display: flex;
    flex-direction: column;
}
.projectArchive, .projectSelect{
    width:85vw;
    background-color: var(--projectcolor);
    border-style: solid;
    border-width: var(--projectborder);
    border-radius: 3px;
    margin: 15px 15px 0px 15px;
    padding: 15px 15px 0px 15px;
    transition: transform .2s; 
}
.projectSelect{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin: 15px 15px 0px 15px;
    padding: 15px 15px 15px 15px;
}
.acc__title{
    cursor:pointer;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}
.dropdownArrow{
    color:var(--light);
    margin-top: -10px;
}
.acc__panel {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 10px 0 10px 0px;
    text-align: left;
}
.projectSelect:hover, .projectArchive:hover{
    background-color: var(--projectcolor1hover);
    transform: scale(1.01);
}
.projectArchive:hover{
    /* background-color: rgb(255, 220, 200); */
    background-color: var(--projectcolor2hover);
}
.buttonrow{
    display:flex;
    flex-direction: row;
    justify-content: space-between;
}
.tagrow{
    display:flex;
    flex-direction: row;
    align-items: center;
    flex-wrap: wrap;
}
.projectbuttons{
    color: var(--main);
    font-size: 22px;
    display:flex;
    flex-direction: row;
    align-self: flex-end;
    justify-self: flex-end;
}
.projecttag {
    border-style: solid;
    border-width: 1px;
    border-radius: 40px;
    background-color: var(--projectcolor);
    font-size: 11px;
    padding: 5px 10px 5px 10px;
    margin: 4px;
}
#profileContainer{
    display:flex;
    flex-direction: column-reverse;
    flex-shrink: 3;
    justify-content: center;
    margin:auto;
    max-width: 85vw;
    padding-bottom: 50px;
}
img{
    filter: var(--filter);
    max-width: 60vw;
}
#profileImage{
    margin:auto;
    padding: 20px;
}
#profileText{
    max-width:90vw;
    text-align: left;
    padding: 20px;
    padding-top: 10px;
}
#rightIcons{
    position: fixed;
    right: 2vw;
    bottom: 0;
    display:flex;
    flex-direction: column;
    font-size: 20px;
    height: 350px;
    display:none;
}
#bottomIcons{
    padding-top: 20px;
    padding-bottom: 15px;
    font-size: 22px;
}
#footer{
    display: flex;
    justify-content: center;
    flex-direction: column;
    width: 100vw;
    align-items: center;
    padding-bottom: 20px;
    color: var(--light);
}
#footerFont{
    font-size:16px;
}
/* ... */

